--- a/app/globals.css
+++ b/app/globals.css
@@ -105,7 +105,7 @@ body {
   }
   /* // RESET */
   body {
-    @apply bg-background overflow-hidden;
+    @apply bg-background;
   }
 
   h1, h2, h3, h4, h5, h6 {
